[metadata]
name = chromrings
author = Francesco Padovani
author_email = francesco.padovani@helmholtz-muenchen.de
description = A Python package to analyse chromatin rings formed in C.Elegans upon starvation
keywords =
    C. Elegans
    fluorescence microscopy
    chromatin
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ElpadoCan/ChromRings
project_urls =
    Author contact = https://twitter.com/frank_pado
    Schmoller lab = https://www.helmholtz-munich.de/en/ife/research-groups/schmoller-lab
    Cabianca lab = https://www.helmholtz-munich.de/en/ife/research-groups/cabianca-lab
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: BSD License
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Utilities

[options]
packages = find:
python_requires =
    >=3.8
# package_dir =
#     =src
include_package_data = True
install_requires =
    cellacdc
    pyarrow
    pandas<2.2.0
    statsmodels

# [options.packages.find]
# where = src

# [options.entry_points]
# console_scripts =
#    cellacdc = cellacdc.__main__:run
#    acdc = cellacdc.__main__:run
